dinoco_docs/src/content/v0.0.2/it-it/orm/update-many.mdx
export const title = "update_many";

# update_many

Utilizzato per aggiornare più record contemporaneamente.

---

## Cosa puoi fare

- `.cond(...)`: limita quali record possono essere aggiornati.
- `.values(Vec&lt;M&gt;)`: definisce gli elementi utilizzati nell'aggiornamento in batch.
- `.returning::&lt;T&gt;()`: restituisce i record aggiornati come una lista tipizzata.
- `.execute(&client)`: esegue l'aggiornamento in batch.

## Ritorno

Senza `.returning::&lt;T&gt;()`, il ritorno è:

```rust
DinocoResult<()>
```

Con `.returning::&lt;T&gt;()`, il ritorno diventa:

```rust
DinocoResult<Vec<T>>
```

## Esempio base

```rust
dinoco::update_many::<User>()
    .values(vec![
        User { id: 1, email: "a@acme.com".into(), name: "Ana".into() },
        User { id: 2, email: "b@acme.com".into(), name: "Bia".into() },
    ])
    .execute(&client)
    .await?;
```

## Esempio con ritorno

```rust
let updated = dinoco::update_many::<User>()
    .values(vec![
        User { id: 2, name: "Ana Batch".to_string() },
        User { id: 3, name: "Caio Batch".to_string() },
    ])
    .returning::<User>()
    .execute(&client)
    .await?;
```

## Esempio con filtro

```rust
dinoco::update_many::<User>()
    .cond(|x| x.active.eq(true))
    .values(vec![
        User { id: 10, email: "a@acme.com".into(), name: "Ana".into() },
        User { id: 11, email: "b@acme.com".into(), name: "Bia".into() },
    ])
    .execute(&client)
    .await?;
```

## Esempio con worker

```rust
use database::*;

let _worker = workers()
    .on::<Vec<User>, _, _>("user.batch-updated", |job| async move {
        // Utenti aggiornati
        println!("Utenti aggiornati: {}", job.data.len());
        job.success();
    })
    .run()
    .await?;

dinoco::update_many::<User>()
    .values(vec![
        User { id: 10, email: "a@acme.com".into(), name: "Ana".into() },
        User { id: 11, email: "b@acme.com".into(), name: "Bia".into() },
    ])
    .enqueue("user.batch-updated")
    .execute(&client)
    .await?;
```

Scopri di più sui worker in [**`queues`**](/v0.0.2/orm/queues).

## Prossimi passi

- [**`update::&lt;M&gt;()`**](/v0.0.1/orm/update): aggiornamento tradizionale con condizione.
- [**`find_and_update::&lt;M&gt;()`**](/v0.0.1/orm/find-and-update): aggiornamento atomico su un singolo record.
